--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   change_app_package_name: ^1.1.0
   carousel_slider: ^4.1.1
   flutter_svg: ^1.1.0
+  soundpool: ^2.3.0
+  reliable_interval_timer: ^1.0.0
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -74,6 +76,7 @@ flutter:
   assets:
     - images/
     - images/chords/
+    - sounds/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
